# PortfolioBench

./: .gitattributes  .gitignore  .gitmodules  ABOUT.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINE_README.md  QUICKSTART.md  README.md  benchmark.py  benchmark_all.py  cli.py  conftest.py  docker-compose.yml  fix_utc_imports.py  generate_report.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-ml.txt  requirements-new.txt
.github/actions/setup-talib/: action.yml
.github/workflows/: benchmark-report.yml  test.yml
adapters/portbench/: runner.py
alpha/: AutoregressionAlpha.py  BollingerAlpha.py  EventLstmAlpha.py  EventProbAlpha.py  MacdAlpha.py  OrderbookAlpha.py  PolymarketFactors.py  RsiAlpha.py  SimpleEmaFactors.py  event_stacked_lstm.pth  interface.py
alpha/AutoRegression/: ar_model.pth  autoregression.py  data_processing.py
dataset/: main.py
dataset/polymarket_orderbook/: fetch_orderbook.py  orderbook_feature_generation.py  parser.py  run_pipeline.py
dataset/polymarket_orderbook/utils/: fetch_orderbook.py  orderbook_feature_generation.py  parser.py  paths.py
docs/polymarket/: README.md  training-guide.md
examples/: pipeline_examples.py
freqtrade/: Dockerfile  docker-compose.yml  main.py
freqtrade/commands/: __init__.py  arguments.py  benchmark_commands.py  cli_options.py  data_commands.py  portfolio_commands.py
freqtrade/exchange/: __init__.py  check_exchange.py  common.py  exchange.py  polymarket.py  portfoliobench.py
freqtrade/user_data/: config.json
kalshi/: .env.example  baseline.py
output/: backtest_results.csv  pipeline_result.json  portfolio_weights.csv  report.html
pipeline/: __init__.py  config.py  integrations.py  orchestrator.py  results.py  verification.py
pipelines/: balanced_multi_alpha.json  risk_parity.json  simple_ema_cross.json
polymarket/: __init__.py  contracts.py  data_builder.py  event_dataset.py  event_features.py  event_model.py  real_data_builder.py  settlement.py  synthetic_prices.py
portfolio/: PortfolioManagement.py
scripts/: prepare_event_model.py
strategy/: AdaptiveMAStrategy.py  AdxStrengthStrategy.py  AroonTrendStrategy.py  AtrTrailingStopStrategy.py  BbWidthExpansionStrategy.py  BollingerBounceStrategy.py  BopTrendStrategy.py  BullishEngulfingStrategy.py  CciMeanReversionStrategy.py  ChaikinMoneyFlowStrategy.py  CompositeScoreStrategy.py  CoppockCurveStrategy.py  DemaCrossStrategy.py  DonchianBreakoutStrategy.py  EmaCrossStrategy.py  EmaRibbonStrategy.py  FisherTransformStrategy.py  GoldenCrossStrategy.py  HeikinAshiStrategy.py  HigherHighStrategy.py  IchimokuCloudStrategy.py  IchimokuSimpleStrategy.py  KeltnerChannelStrategy.py  LinearRegressionStrategy.py  MacdAdxStrategy.py  MacdZeroCrossStrategy.py  MlpSpeculativeStrategy.py  MomentumScoreStrategy.py  MoneyFlowStrategy.py  MultiFactorConfluenceStrategy.py  ONS.py  ObvTrendStrategy.py  OrderbookImbalanceStrategy.py  ParabolicSarStrategy.py  PolymarketMeanReversionStrategy.py  PolymarketMomentumStrategy.py  PpoMomentumStrategy.py  PriceActionCandleStrategy.py  PriceChannelStrategy.py  RSI_EMA_strategy.py  (+19 more)
strategy/PolymarketLogicalArb/: PolymarketLogicalArbStrategy.py
strategy/adaptive_trend/: adaptive_trend.py  btc-usd-max.csv  eth-usd-max.csv  sol-usd-max.csv  xrp-usd-max.csv
strategy/crypto_factors_regression/: BTC_scores.csv  Bitcoin_marketcap.csv  beta_factors_model.ipynb  beta_factors_model.joblib  beta_factors_model.py
strategy/mlp_speculative_model/ml_utils/: NNModel.py  data_process.py  ensemble.py  labelling_algorithm.py  technical_analysis_tool.py
strategy/mlp_speculative_model/models/: model_best_weights.keras  model_final_2_1.h5  model_final_2_2.h5  model_final_3_2.h5  model_final_4_2.h5  model_final_5_1.h5  model_final_5_2.h5
tests/: test_adaptive_trend_strategy.py  test_alpha.py  test_backtesting.py  test_beta_factors_strategy.py  test_data_integrity.py  test_orderbook_alpha.py  test_pipeline.py  test_polymarket_logical_arb_strategy.py  test_portfolio_management.py  test_workflow.py
tests/test_polymarket/: test_contracts.py  test_event_model.py  test_settlement.py  test_synthetic_prices.py
user_data/: config.json  config_polymarket.json  run_custom.py
user_data/data/binance/: AAPL_USD-5m.feather  AAPL_USDT-1d.feather  AAPL_USDT-4h.feather  AAPL_USDT-5m.feather  ABBV_USD-5m.feather  ABBV_USDT-1d.feather  ABBV_USDT-4h.feather  ABBV_USDT-5m.feather  ABT_USD-1d.feather  ABT_USDT-4h.feather  ABT_USDT-5m.feather  ADA_USDT-1d.feather  ADA_USDT-4h.feather  ADA_USDT-5m.feather  ADBE_USD-1d.feather  ADBE_USD-4h.feather  ADBE_USD-5m.feather  ADBE_USDT-5m.feather  ADI_USD-5m.feather  ADI_USDT-1d.feather  ADI_USDT-4h.feather  ADI_USDT-5m.feather  AMAT_USD-4h.feather  AMAT_USD-5m.feather  AMAT_USDT-1d.feather  AMAT_USDT-5m.feather  AMD_USD-1d.feather  AMD_USD-4h.feather  AMD_USD-5m.feather  AMD_USDT-5m.feather  AMGN_USD-1d.feather  AMGN_USDT-4h.feather  AMGN_USDT-5m.feather  AMZN_USD-4h.feather  AMZN_USDT-1d.feather  AMZN_USDT-5m.feather  ANET_USD-5m.feather  ANET_USDT-1d.feather  ANET_USDT-4h.feather  ANET_USDT-5m.feather  (+376 more)
user_data/data/polymarket/: AI-REGULATION-NO_USDT-1d.feather  AI-REGULATION-NO_USDT-4h.feather  AI-REGULATION-YES_USDT-1d.feather  (+33 more)
user_data/strategies/: DonchianChannelStrategy.py  DualModelPolymarketPortfolio.py  ExhaustionGapBullishStrategy.py  ONS.py  PairsTradingStrategy.py  VVR_VWAP_Strategy.py  adaptive_trend.py  anti_corr.py  best_single_asset.py  crp.py  exp_gradient.py  inv_vol.py  max_sharpe.py  min_var.py  polymarket_portfolio.py  risk_parity.py  up.py
utils/: backtest_polymarket.bash  backtest_script.bash  backtest_tests.bash  download_data.py  download_data.sh  download_polymarket_data.py  generate_polymarket_test_data.py  generate_test_data.py  test.py
workflow/: __init__.py  cli_workflow.py  executor.py
workflow/examples/: bollinger_blend.json  ema_blend_ai_analysis.json  ema_ons_blend.json  flowmesh_echo_test.json  flowmesh_inference_only.json  macd_ons_pure.json  rsi_equal_weight.json
(+16 files in other folders)
